# os-i18n-tools

./: README.md  completion_check.py  glossary-ja.sh  import-trans-for-propose.sh  import-trans.sh  po-file-update.sh  propose-trans.sh  requirements.txt  setup.cfg  snapshot-trans.sh  test-requirements.txt  tox.ini  update-lang-list.py  update-lang-list.sh  update-pot.sh
devstack/: plugin.sh  settings
horizon/: check_translation_prorgess.py  diff-pot-files.sh
openstack_i18n_tools/glossary/: check.py  main.py  read_po.py  setup.cfg  sync.py  write_po.py
openstack_i18n_tools/glossary/ja/: wiki2yaml.py
