[metadata]
name = openstack-i18n-tools
summary = OpenStack i18n tools
author = Akihiro Motoki
author-email = amotoki@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: I18n Contributors
    Intended Audience :: Documentaion Contributors
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: I18n

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_i18n_tools

[entry_points]
console_scripts =
    os-i18n-glossary-tool = openstack_i18n_tools.glossary.main:main
    os-glossary-ja-tool = openstack_i18n_tools.glossary.ja.wiki2yaml:main
openstack_i18n_tools.glossary =
    check = openstack_i18n_tools.glossary.check:Check
    sync = openstack_i18n_tools.glossary.sync:Sync
    write-po = openstack_i18n_tools.glossary.write_po:WritePo
    read-po = openstack_i18n_tools.glossary.read_po:ReadPo

[wheel]
universal = 1

[pbr]
warnerrors = True
