[metadata]
name = openstacki18n
summary = OpenStack I18n
description-file = README.rst
author = OpenStack
author-email = openstack-i18n@lists.openstack.org
home-page = http://docs.openstack.org/developer/i18n/
classifier =
    Environment :: OpenStack
    Intended Audience :: I18n Contributors
    Intended Audience :: Documentaion Contributors
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: I18n

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_i18n

[entry_points]
console_scripts =
    openstack-i18n-glossary-tool = openstack_i18n.glossary_tools.main:main
openstack_i18n.glossary =
    check = openstack_i18n.glossary_tools.check:Check
    sync = openstack_i18n.glossary_tools.sync:Sync
    write-po = openstack_i18n.glossary_tools.write_po:WritePo
    read-po = openstack_i18n.glossary_tools.read_po:ReadPo

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = True
